@@ -1,18 +1,24 @@
 //
 // jMax
+// Copyright (C) 1994, 1995, 1998, 1999 by IRCAM-Centre Georges Pompidou, Paris, France.
 // 
-// Copyright (C) 1999 by IRCAM
-// All rights reserved.
-//
-// Authors: Maurizio De Cecco, Francois Dechelle, Enzo Maggi, Norbert Schnell
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
 // 
-// This program may be used and distributed under the terms of the 
-// accompanying LICENSE.
-//
-// This program is distributed WITHOUT ANY WARRANTY. See the LICENSE
-// for DISCLAIMER OF WARRANTY.
+// See file LICENSE for further informations on licensing terms.
 // 
-//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+// 
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+// 
+
 package ircam.jmax;
 
 import java.awt.*;
